[package]
name = "pod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
reqwest = { version = "0.11.24", features = ["json"] }
scraper = "0.18.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_qs = "0.12.0"
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["full"] }
